# tech-challenge-fase-3

./: .gitignore  README.md
medical-assistant/: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
medical-assistant/api/: README.md  __init__.py  dependencies.py  schemas.py  server.py  test_endpoints.py
medical-assistant/assistant/: README.md  __init__.py  chain.py  config.py  demo_chat.py  demo_graph.py  explainability.py  graph.py  graph_nodes.py  graph_prompts.py  graph_state.py  intent_classifier.py  llm.py  prompts.py  router.py  test_chain.py  test_classifier_prompts.py  test_explainability.py  test_graph_integration.py  test_graph_nodes.py  test_llm.py  test_rag.py  test_router.py
medical-assistant/assistant/audit/: __init__.py  __main__.py  cli.py  reader.py  schema.py  test_reader.py  test_writer.py  writer.py
medical-assistant/assistant/guardrails/: __init__.py  __main__.py  base.py  bypass.py  clinical_decision.py  diagnosis.py  prescription.py  registry.py  scope.py  test_bypass.py  test_clinical_decision.py  test_diagnosis.py  test_prescription.py  test_registry.py  test_scope.py
medical-assistant/assistant/rag/: __init__.py  build_index.py  retriever.py
medical-assistant/assistant/tools/: __init__.py  build_patient_db.py  patient_records.py
medical-assistant/data/: README.md  anonymization.py  generate_synthetic.py  inspect_dataset.py  prepare_dataset.py  test_anonymization.py
medical-assistant/data/processed/: dataset_report.md  test.jsonl  train.jsonl  val.jsonl
medical-assistant/docs/: arquitetura_fase4.md  arquitetura_fase5.md  arquitetura_fase6.md  langgraph_flow.md  langgraph_flow_auto.md
medical-assistant/docs/relatorio/: relatorio_tecnico.md
medical-assistant/docs/relatorio/apendices/: A_estrutura_repo.md  B_estatisticas_dataset.md  C_hiperparametros.md  D_calibracao_rag.md  E_casos_avaliacao.md  F_reproducao.md  G_audit_schema.md
medical-assistant/evaluation/: calibrate_rag_threshold.py  comparison.md  comparison_phase3.md  comparison_phase4.md  comparison_phase4_th050.md  eval_graph.py  eval_guardrails.py  eval_rag.py  eval_system_prompt.py  graph_eval_results.md  guardrails_eval_results.md  metrics.json  rag_threshold_calibration_results.md
medical-assistant/evaluation/graph_traces/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  case_10.json
medical-assistant/finetuning/: README.md  chat.py  evaluate.py  plot_training.py  prepare_mlx_dataset.py  train.py
medical-assistant/finetuning/configs/: lora_config.yaml
medical-assistant/finetuning/output/: training_log.json
medical-assistant/finetuning/output/adapters/: adapter_config.json  adapters.safetensors
medical-assistant/scripts/: run_all.sh
medical-assistant/ui/: README.md  __init__.py  app.py  client.py  styles.py
medical-assistant/ui/components/: about_tab.py  audit_tab.py  consult_tab.py
