[project]
name = "medical-assistant"
version = "0.1.0"
description = "Assistente médico com LLM fine-tuned, LangChain, LangGraph e guardrails (Tech Challenge — Fase 3)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ana Luzia Maranini", email = "ana.maranini@taqtile.com.br" },
]
license = { text = "Proprietary" }

# Dependências do núcleo do projeto (orquestração + RAG + persistência).
# Treino (transformers/peft/bitsandbytes) NÃO entra aqui — ele roda no Colab.
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "chromadb>=0.5,<0.6",
    "sentence-transformers>=3.0,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
# Backend HTTP que expõe o assistente.
api = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

# Frontend de demonstração (gravação do vídeo de 15min).
ui = [
    "streamlit>=1.36,<2.0",
]

# Inferência local no Mac Apple Silicon.
# mlx-lm: backend nativo da Apple (rápido, usa Metal).
# ollama: fallback via servidor local + cliente Python.
inference = [
    "mlx-lm>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "ollama>=0.3,<1.0",
]

# Processamento de dados médicos (datasets, NER clínico, tabulares).
data = [
    "datasets>=2.20,<3.0",
    "spacy>=3.7,<4.0",
    "pandas>=2.2,<3.0",
]

# Ferramentas de desenvolvimento.
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "ipykernel>=6.29,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistant", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
