[project]
name = "medical-assistant"
version = "0.1.0"
description = "Assistente médico com LLM fine-tuned, LangChain, LangGraph e guardrails (Tech Challenge — Fase 3)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ana Luzia Maranini", email = "ana.maranini@taqtile.com.br" },
]
license = { text = "Proprietary" }

# Dependências do núcleo do projeto (orquestração + RAG + persistência).
# Treino (transformers/peft/bitsandbytes) NÃO entra aqui — ele roda no Colab.
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "chromadb>=0.5,<0.6",
    "sentence-transformers>=3.0,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
# Backend HTTP que expõe o assistente.
api = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

# Frontend de demonstração (gravação do vídeo de 15min).
# rich: terminal bonito do demo_chat (banners, painéis, markdown render).
ui = [
    "streamlit>=1.36,<2.0",
    "rich>=13.0,<14.0",
]

# Inferência local no Mac Apple Silicon.
# mlx-lm: backend nativo da Apple (Metal). Versão estável atual no PyPI: 0.31.x.
# Também é o framework usado no fine-tuning LoRA da Fase 2.
# ollama: fallback via servidor local + cliente Python.
inference = [
    "mlx-lm>=0.20,<1.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "ollama>=0.3,<1.0",
]

# Processamento de dados médicos (datasets, NER clínico, tabulares,
# geração sintética via OpenAI, demográficos brasileiros via Faker,
# retry resiliente, contagem aproximada de tokens).
data = [
    "datasets>=2.20,<3.0",
    "spacy>=3.7,<4.0",
    "pandas>=2.2,<3.0",
    "openai>=1.40,<2.0",
    "faker>=26.0,<28.0",
    "tenacity>=9.0,<10.0",
    "tiktoken>=0.7,<1.0",
]

# Ferramentas de desenvolvimento.
# matplotlib: gráficos de loss curve / lr schedule para o relatório técnico.
# pyyaml: leitura/escrita dos configs de fine-tuning.
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "ipykernel>=6.29,<7.0",
    "matplotlib>=3.8,<4.0",
    "pyyaml>=6.0,<7.0",
    # httpx: cliente HTTP usado pelos testes da API (Fase 7) e pelo wrapper da UI.
    "httpx>=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistant", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
# Permite que os testes em data/test_*.py importem módulos do próprio
# diretório (ex: `from anonymization import ...`) sem precisar instalar
# o projeto como pacote. `.` adicionado pra resolver `from assistant.*`.
pythonpath = ["data", "."]
testpaths = ["data", "assistant", "api"]
python_files = ["test_*.py"]
markers = [
    "slow: testes que carregam o modelo MLX (~10s+) — pulam por default. Use -m slow.",
]

